@@ -635,20 +635,20 @@ CREATE TABLE `#__messages_cfg` (
 #
 
 CREATE TABLE `#__modules` (
-  `id` integer NOT NULL auto_increment,
-  `title` text NOT NULL,
+  `id` int(11) NOT NULL AUTO_INCREMENT,
+  `title` varchar(100) NOT NULL DEFAULT '',
   `content` text NOT NULL,
-  `ordering` integer NOT NULL default '0',
-  `position` varchar(50) default NULL,
-  `checked_out` integer unsigned NOT NULL default '0',
-  `checked_out_time` datetime NOT NULL default '0000-00-00 00:00:00',
-  `published` tinyint(1) NOT NULL default '0',
-  `module` varchar(50) default NULL,
-  `access` tinyint(3) unsigned NOT NULL default '0',
-  `showtitle` tinyint(3) unsigned NOT NULL default '1',
-  `params` text NOT NULL,
-  `iscore` tinyint(4) NOT NULL default '0',
-  `client_id` tinyint(4) NOT NULL default '0',
+  `ordering` int(11) NOT NULL DEFAULT '0',
+  `position` varchar(50) DEFAULT NULL,
+  `checked_out` int(10) unsigned NOT NULL DEFAULT '0',
+  `checked_out_time` datetime NOT NULL DEFAULT '0000-00-00 00:00:00',
+  `published` tinyint(1) NOT NULL DEFAULT '0',
+  `module` varchar(50) DEFAULT NULL,
+  `access` tinyint(3) unsigned NOT NULL DEFAULT '0',
+  `showtitle` tinyint(3) unsigned NOT NULL DEFAULT '1',
+  `params` varchar(5120) NOT NULL DEFAULT '',
+  `iscore` tinyint(4) NOT NULL DEFAULT '0',
+  `client_id` tinyint(4) NOT NULL DEFAULT '0',
   PRIMARY KEY  (`id`),
   KEY `published` (`published`,`access`),
   KEY `newsfeeds` (`module`,`published`)
